fix spacing, input to tiles, add rack, add session and playerId

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,10 +1,16 @@
 @import 'nib'
-input-size = 35px
+tile-size = 35px
+tiles = 7
 
-table input
-	width input-size
-	height input-size
-	
-	text-align center
-	font-size 25px
-	text-transform uppercase
+.space, .tile
+    width tile-size
+    height tile-size
+    text-align center
+    border 1px solid
+.tile
+    text-align center 
+.rack
+    display block
+    width (tile-size + 4px) * tiles
+    height tile-size
+    border 1px solid
